@@ -21,13 +21,19 @@
  */
 /**
  * SECTION:gstpipeline
- * @short_description: Top-level bin with scheduling and pipeline management functionality.
+ * @short_description: Top-level bin with clocking and bus management functionality.
  * @see_also: #GstBin
  *
  * In almost all cases, you'll want to use a GstPipeline when creating a filter
- * graph.  The GstPipeline will manage all the scheduling issues, including
- * threading, as well as provide simple interfaces to common functions, like
- * 'Play'.
+ * graph.  The GstPipeline will manage the selection and distribution of a global
+ * clock as well as provide a GstBus to the application.
+ *
+ * The pipeline will also use the selected clock to calculate the stream time of
+ * the pipeline.
+ *
+ * When sending a seek event to a GstPipeline, it will make sure that the
+ * pipeline is properly PAUSED and resumed as well as update the new stream time
+ * after the seek.
  *
  * gst_pipeline_new() is used to create a pipeline. when you are done with 
  * the pipeline, use gst_object_unref() to free its resources including all
